# capitalize-rs

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: format.yml  test-nightly.yml  test.yml
benches/: benchmark.rs  sample.txt
src/: iter.rs  lib.rs
tests/: capitalize.rs
