[package]
name = "capitalize"
description = "Change first character to upper case and the rest to lower case, and other common alternatives"
version = "0.2.0"
edition = "2021"
authors = [
    "Jesus Hernandez <jesushdez@protonmail.com>",
    "Bartek Winter <bartekwinter3@gmail.com>",
]
license = "Unlicense"
repository = "https://github.com/jhg/capitalize-rs"
keywords = ["capitalize", "string", "case", "change", "title"]
categories = ["text-processing"]
exclude = [
    ".idea/",
    ".vscode/",
    ".github/",
    # Tests will not be used when it's used as dependency,
    # then we can reduce size of archive.
    "tests/",
]

[dev-dependencies]
data-test = "0.1"
