[package]
name = "capitalize"
description = "Change first character to upper case and the rest to lower case, and other common alternatives"
version = "0.3.1"
edition = "2021"
authors = [
    "Jesus Hernandez <jesushdez@protonmail.com>",
    "Bartek Winter <bartekwinter3@gmail.com>",
]
license = "Unlicense"
repository = "https://github.com/jhg/capitalize-rs"
keywords = ["capitalize", "string", "case", "change", "title"]
categories = ["text-processing"]
exclude = [
    ".idea/",
    ".vscode/",
    ".github/",
    # Tests will not be used when it's used as dependency,
    # then we can reduce size of archive.
    # Last measures show reduction from 12.7KiB (4.7KiB compressed)
    # to 8.2KiB (3.2KiB compressed).
    "tests/",
]

[features]
default = []
nightly = []

[dev-dependencies]
data-test = "0.1"
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
